<resources>
    <string name="app_name">SIH Demo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_username">Enter username</string>
    <string name="seeker">SEEKER</string>
    <string name="admin">ADMIN</string>
    <string name="provider">PROVIDER</string>
    <string name="enter_password">Enter password</string>
    <string name="login">LOGIN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dashboard">Dashboard</string>
    <string name="account">Account</string>
    <string name="pages">PAGES</string>
    <string name="login_menuitem">Login</string>
    <string name="register">Register</string>
    <string name="error">Error</string>
    <string name="seekers">Seekers</string>
    <string name="revenue">Revenue</string>
    <string name="panel">Panel</string>
    <string name="revaluation">Revaluation</string>
    <string name="s_u_s">S.U.S</string>
    <string name="verified">Verified</string>
    <string name="account_fragment_seeker">Account Fragment Seeker</string>
    <string name="dashboard_fragment">DashBoard Fragment Seeker</string>
    <string name="account_fragment_admin">Account Fragment Admin</string>
</resources>