<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/dashboard_item_3"
            android:icon="@drawable/ic_home"
            android:title="@string/dashboard"/>
        <item android:id="@+id/account_item_3"
            android:icon="@drawable/ic_person"
            android:title="@string/account"/>
    </group>
    <item android:title="@string/pages">
        <menu>
            <item android:id="@+id/indivisual_item"
                android:icon="@drawable/ic_indivisual"
                android:title="@string/seekers"/>
            <item android:id="@+id/revenue_item"
                android:icon="@drawable/ic_money"
                android:title="@string/revenue"/>
            <item android:id="@+id/panel_item"
                android:icon="@drawable/ic_panel"
                android:title="@string/panel"/>

        </menu>
    </item>
</menu>